--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "seed:zones": "node seeders/seedZonesAndGhats.js"
+    "seed:zones": "node seeders/seedZonesAndGhats.js",
+    "seed:boatTypes": "node seeders/seedBoatTypes.js",
+    "seed:prices": "node seeders/seedPrices.js"
   },
   "keywords": [
     "api",
